fix(plus): word-wrap for collection item.

--- a/client/src/plus/collections/index.scss
+++ b/client/src/plus/collections/index.scss
@@ -160,6 +160,7 @@
 
     p {
       margin: 0;
+      word-wrap: break-word;
     }
 
     footer {
